--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,7 @@
         "nwidart/laravel-modules": "^8.2",
         "spatie/laravel-tags": "^3.0",
         "teamtnt/laravel-scout-tntsearch-driver": "^11.1",
-        "wildside/userstamps": "^2.1"
-    },
-    "require-dev": {
+        "wildside/userstamps": "^2.1",
         "laravel/telescope": "^4.4",
         "pestphp/pest": "^0.3.17",
         "pestphp/pest-plugin-laravel": "^0.3.0",
