--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "dyrynda/laravel-model-uuid": "^6.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^8.12",
+        "laravel/horizon": "^5.6",
         "laravel/passport": "^10.1",
         "laravel/scout": "^8.5",
         "laravel/ui": "^3.1",
