--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": ">=8.0",
         "dyrynda/laravel-efficient-uuid": "^4.2",
         "dyrynda/laravel-model-uuid": "^6.4",
         "guzzlehttp/guzzle": "^7.2",
